with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.14.02
=====================
[2142691] Better support for Japanese text.
[2113261] No longer crashes when opening write-protected database.
[2102624] Can now change a normal entry into an alias or an alias'
base entry into an alias of another entry taking its aliases with it.
[2101656] Incorrect Notes field behaviour when using scroll bars 
corrected.
[2100916] Correct colouring of the Dragbar icons after changing
selected entry.
[2100429] Handle invalid time field in database gracefully. Thanks to
David B. Martin for his help in tracking this down.
[] Correct display of tree items on restore from minimize when 'X'
button used to minimize.
[] Ensure XML Import correctly processes normal entries with a 
password field that is in alias or shortcut form.

Changes to Existing Features in 3.14.02
=======================================


New Features for 3.14.02
========================
[Open Discussion] Implement the CF_CLIPBOARD_VIEWER_IGNORE feature
supported by some Clipboard Viewers.
[Open Discussion] Add feature to display a subset of the password. Useful
for websites that need different particular characters from a password at
each login.
[2203438] Remove "[alt]", "[ssh]" and "{alt}" special keywords from URL
when copying to the clipboard.
[2144489] Click on the text next to edit fields to copy the field to
the clipboard. Ctrl+Click on the URL will launch the browser. Text will
flash to show what it has done (green - copy, pink - launch).

Bugs fixed in 3.14.01
=====================
[2096504] All user set fields are now checked when merging databases.
[2096164] -h, -u and -g command line functionality restored.